# weather_bot_rust

./: .env  .gitignore  .releaserc  .releaserc.json  .releaserc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
docker/: start.sh
migrations/2022-08-09-142755_create_tables_weather_bot/: down.sql  up.sql
migrations/2022-08-09-150319_create_tables_fang/: down.sql  up.sql
migrations/2022-08-16-065308_insert_cities/: down.sql
resources/: setup.sql
src/: database_manage.rs  db.rs  deliver.rs  json_parse.rs  lib.rs  main.rs  open_weather_map.rs  seeds.rs  tests.rs  workers.rs
src/command/: mod.rs  process_update_task.rs
src/open_weather_map/: client.rs  mod.rs  weather.rs
src/queries/: check_cities_exist.sql  check_user_exists.sql  create_db.sql  create_enum_type.sql  create_table_chat.sql  create_table_cities.sql  delete_client.sql  delete_forecasts.sql  drop_db.sql  get_chat.sql  get_city_by_pattern.sql  get_forecast.sql  get_forecasts_by_time.sql  get_forecasts_by_user.sql  insert_city.sql  insert_client.sql  insert_forecast.sql  modify_before_state.sql  modify_city.sql  modify_context.sql  modify_offset.sql  modify_pattern_search.sql  modify_selected.sql  modify_state.sql  search_city.sql  search_city_by_id.sql  search_client.sql  update_forecast.sql  update_forecast_by_user.sql
src/telegram/: client.rs  handler.rs  mod.rs  process_update_task.rs
src/telegram/command/: mod.rs
