[package]
name = "weather_bot_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.18", default-features = false, features = ["async-http-client" , "async-telegram-trait"] }
# bytes = "1.0.1"
futures = "0.3.21"
serde_json = "1.0"
reqwest = "0.9.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
openssl = "0.10.38"
tokio-postgres = "0.7.6"
